// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugins/github/relationalView comment matches snapshot 1`] = `
Object {
  "address": Object {
    "id": "373768703",
    "parent": Object {
      "number": "2",
      "repo": Object {
        "name": "example-github",
        "owner": "sourcecred",
        "type": "REPO",
      },
      "type": "ISSUE",
    },
    "type": "COMMENT",
  },
  "body": "It should also be possible to reference by exact url: https://github.com/sourcecred/example-github/issues/6",
  "nominalAuthor": Object {
    "login": "decentralion",
    "type": "USERLIKE",
  },
  "url": "https://github.com/sourcecred/example-github/issues/2#issuecomment-373768703",
}
`;

exports[`plugins/github/relationalView issue matches snapshot 1`] = `
Object {
  "address": Object {
    "number": "2",
    "repo": Object {
      "name": "example-github",
      "owner": "sourcecred",
      "type": "REPO",
    },
    "type": "ISSUE",
  },
  "body": "This issue references another issue, namely #1",
  "comments": Array [
    Object {
      "id": "373768703",
      "parent": Object {
        "number": "2",
        "repo": Object {
          "name": "example-github",
          "owner": "sourcecred",
          "type": "REPO",
        },
        "type": "ISSUE",
      },
      "type": "COMMENT",
    },
    Object {
      "id": "373768850",
      "parent": Object {
        "number": "2",
        "repo": Object {
          "name": "example-github",
          "owner": "sourcecred",
          "type": "REPO",
        },
        "type": "ISSUE",
      },
      "type": "COMMENT",
    },
    Object {
      "id": "385576185",
      "parent": Object {
        "number": "2",
        "repo": Object {
          "name": "example-github",
          "owner": "sourcecred",
          "type": "REPO",
        },
        "type": "ISSUE",
      },
      "type": "COMMENT",
    },
    Object {
      "id": "385576220",
      "parent": Object {
        "number": "2",
        "repo": Object {
          "name": "example-github",
          "owner": "sourcecred",
          "type": "REPO",
        },
        "type": "ISSUE",
      },
      "type": "COMMENT",
    },
    Object {
      "id": "385576248",
      "parent": Object {
        "number": "2",
        "repo": Object {
          "name": "example-github",
          "owner": "sourcecred",
          "type": "REPO",
        },
        "type": "ISSUE",
      },
      "type": "COMMENT",
    },
    Object {
      "id": "385576273",
      "parent": Object {
        "number": "2",
        "repo": Object {
          "name": "example-github",
          "owner": "sourcecred",
          "type": "REPO",
        },
        "type": "ISSUE",
      },
      "type": "COMMENT",
    },
    Object {
      "id": "385576920",
      "parent": Object {
        "number": "2",
        "repo": Object {
          "name": "example-github",
          "owner": "sourcecred",
          "type": "REPO",
        },
        "type": "ISSUE",
      },
      "type": "COMMENT",
    },
    Object {
      "id": "385576936",
      "parent": Object {
        "number": "2",
        "repo": Object {
          "name": "example-github",
          "owner": "sourcecred",
          "type": "REPO",
        },
        "type": "ISSUE",
      },
      "type": "COMMENT",
    },
  ],
  "nominalAuthor": Object {
    "login": "decentralion",
    "type": "USERLIKE",
  },
  "title": "A referencing issue.",
  "url": "https://github.com/sourcecred/example-github/issues/2",
}
`;

exports[`plugins/github/relationalView pull matches snapshot 1`] = `
Object {
  "address": Object {
    "number": "5",
    "repo": Object {
      "name": "example-github",
      "owner": "sourcecred",
      "type": "REPO",
    },
    "type": "PULL",
  },
  "body": "@wchargin could you please do the following:
- add a commit comment
- add a review comment requesting some trivial change
- i'll change it
- then approve the pr",
  "comments": Array [
    Object {
      "id": "396430464",
      "parent": Object {
        "number": "5",
        "repo": Object {
          "name": "example-github",
          "owner": "sourcecred",
          "type": "REPO",
        },
        "type": "PULL",
      },
      "type": "COMMENT",
    },
  ],
  "mergedAs": Object {
    "hash": "6d5b3aa31ebb68a06ceb46bbd6cf49b6ccd6f5e6",
    "type": "COMMIT",
  },
  "nominalAuthor": Object {
    "login": "decentralion",
    "type": "USERLIKE",
  },
  "reviews": Array [
    Object {
      "id": "100313899",
      "pull": Object {
        "number": "5",
        "repo": Object {
          "name": "example-github",
          "owner": "sourcecred",
          "type": "REPO",
        },
        "type": "PULL",
      },
      "type": "REVIEW",
    },
    Object {
      "id": "100314038",
      "pull": Object {
        "number": "5",
        "repo": Object {
          "name": "example-github",
          "owner": "sourcecred",
          "type": "REPO",
        },
        "type": "PULL",
      },
      "type": "REVIEW",
    },
  ],
  "title": "This pull request will be more contentious. I can feel it...",
  "url": "https://github.com/sourcecred/example-github/pull/5",
}
`;

exports[`plugins/github/relationalView repo matches snapshot 1`] = `
Object {
  "address": Object {
    "name": "example-github",
    "owner": "sourcecred",
    "type": "REPO",
  },
  "issues": Array [
    Object {
      "number": "1",
      "repo": Object {
        "name": "example-github",
        "owner": "sourcecred",
        "type": "REPO",
      },
      "type": "ISSUE",
    },
    Object {
      "number": "2",
      "repo": Object {
        "name": "example-github",
        "owner": "sourcecred",
        "type": "REPO",
      },
      "type": "ISSUE",
    },
    Object {
      "number": "4",
      "repo": Object {
        "name": "example-github",
        "owner": "sourcecred",
        "type": "REPO",
      },
      "type": "ISSUE",
    },
    Object {
      "number": "6",
      "repo": Object {
        "name": "example-github",
        "owner": "sourcecred",
        "type": "REPO",
      },
      "type": "ISSUE",
    },
    Object {
      "number": "7",
      "repo": Object {
        "name": "example-github",
        "owner": "sourcecred",
        "type": "REPO",
      },
      "type": "ISSUE",
    },
    Object {
      "number": "8",
      "repo": Object {
        "name": "example-github",
        "owner": "sourcecred",
        "type": "REPO",
      },
      "type": "ISSUE",
    },
  ],
  "pulls": Array [
    Object {
      "number": "3",
      "repo": Object {
        "name": "example-github",
        "owner": "sourcecred",
        "type": "REPO",
      },
      "type": "PULL",
    },
    Object {
      "number": "5",
      "repo": Object {
        "name": "example-github",
        "owner": "sourcecred",
        "type": "REPO",
      },
      "type": "PULL",
    },
    Object {
      "number": "9",
      "repo": Object {
        "name": "example-github",
        "owner": "sourcecred",
        "type": "REPO",
      },
      "type": "PULL",
    },
  ],
  "url": "https://github.com/sourcecred/example-github",
}
`;

exports[`plugins/github/relationalView review matches snapshot 1`] = `
Object {
  "address": Object {
    "id": "100313899",
    "pull": Object {
      "number": "5",
      "repo": Object {
        "name": "example-github",
        "owner": "sourcecred",
        "type": "REPO",
      },
      "type": "PULL",
    },
    "type": "REVIEW",
  },
  "body": "hmmm.jpg",
  "comments": Array [
    Object {
      "id": "171460198",
      "parent": Object {
        "id": "100313899",
        "pull": Object {
          "number": "5",
          "repo": Object {
            "name": "example-github",
            "owner": "sourcecred",
            "type": "REPO",
          },
          "type": "PULL",
        },
        "type": "REVIEW",
      },
      "type": "COMMENT",
    },
  ],
  "nominalAuthor": Object {
    "login": "wchargin",
    "type": "USERLIKE",
  },
  "state": "CHANGES_REQUESTED",
  "url": "https://github.com/sourcecred/example-github/pull/5#pullrequestreview-100313899",
}
`;

exports[`plugins/github/relationalView userlike matches snapshot 1`] = `
Object {
  "address": Object {
    "login": "decentralion",
    "type": "USERLIKE",
  },
  "url": "https://github.com/decentralion",
}
`;
